<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"

    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:padding="@dimen/spacing_large"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView

            android:layout_width="60dp"
            android:layout_height="60dp"

            android:src="@drawable/baseline_account_balance_24"

            android:contentDescription="@string/app_name" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"

            android:textColor="@color/primary"

            android:textSize="@dimen/title_size"

            android:textStyle="bold" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:text="@string/login_title"

            android:textColor="@color/text_primary"

            android:textSize="@dimen/subtitle_size"

            android:textStyle="bold" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_small"

            android:text="@string/login_subtitle"

            android:textColor="@color/text_secondary"

            android:textSize="@dimen/text_size" />


        <EditText

            android:id="@+id/etPin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:hint="@string/login_pin_hint"

            android:inputType="numberPassword"

            android:maxLength="4"

            android:textSize="@dimen/text_size" />


        <Button

            android:id="@+id/btnLogin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:text="@string/login_button" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>