<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/containerHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_account_balance_24"
            android:contentDescription="@string/app_name" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textSize="@dimen/title_size"

            android:textStyle="bold"

            android:textColor="@color/primary"/>


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:text="@string/welcome_text"

            android:textSize="@dimen/subtitle_size"

            android:textColor="@color/text_primary"/>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_marginTop="@dimen/spacing_medium"

            android:orientation="vertical"

            android:padding="@dimen/spacing_medium"

            android:background="@color/primary">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/balance_title"

                android:textColor="@color/white"/>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/balance_amount"

                android:textColor="@color/white"

                android:textSize="30sp"

                android:textStyle="bold"/>


        </LinearLayout>



        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:text="@string/movement_title"

            android:textSize="@dimen/subtitle_size"

            android:textStyle="bold"/>



        <LinearLayout
            android:id="@+id/containerMovements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Supermercado"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="- $12500"
                    android:textColor="@color/negative" />

            </LinearLayout>

        </LinearLayout>


        <Button

            android:id="@+id/btnAdd"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/spacing_large"

            android:text="@string/btn_add"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>